<resources>
    <string name="app_name">دیلین</string>
    <string name="adding_word_text">اضافه کردن کلمه</string>
    <string name="add_the_word_text">کلمه ی مورد نظر را وارد کنید</string>
    <string name="meaning_of_word_text">معنای کلمه</string>
    <string name="verify_text">تایید</string>
    <string name="cancel_text">لغو</string>

    <string name="delete_word_text">حذف کلمه</string>
    <string name="delete_notebook">حذف دفتر</string>
    <string name="do_you_want_to_delete_this_word_text">آیا می خواهید این کلمه را حذف کنید؟</string>
    <string name="do_you_want_to_delete_this_notebook">آیا می خواهید این دفتر را حذف کنید؟</string>
    <string name="yes_text">بله</string>
    <string name="no_text">نه</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="no_meaning_has_been_entered_text">معنایی وارد نشده است!</string>

    <string name="no_word_was_entered_text">کلمه ای وارد نشده است!</string>

    <string name="bottomsheet">MR. Bottom Sheet</string>
    <string name="bottomsheet1">it is a bottom sheet and can be slided up and down with swiping your finger on screen.</string>

    <string name="notebook_name_text">نام دفتر</string>
    <string name="about_us">درباره ی ما</string>
    <string name="support_programmer">حمایت از برنامه نویس</string>
    <string name="guidance">راهنما</string>
    <string name="rate">امتیاز دهی</string>
    <string name="other_apps">سایر برنامه ها</string>
    <string name="developer_text">توسعه دهنده</string>
    <string name="bookmarked_text">نشان شده</string>
    <string name="main_page_text">صفحه ی اصلی</string>
    <string name="apps_text">اپلیکیشن</string>
    <string name="favorite_text">مورد علاقه</string>
    <string name="all_notebooks">همه دفترها</string>
    <string name="programmer_folani">برنامه نویس: امین والی</string>
    <string name="email">ایمیل</string>
    <string name="email_colon">ایمیل:</string>
    <string name="programmer_email_address">valiamin21@gmail.com</string>
    <string name="notebooks">دفتر ها</string>
    <string name="deleted_from_favorite_list">از لیست علاقه مندی ها حذف شد</string>
    <string name="retrieve">بازگردانی</string>
    <string name="was_deleted">حذف شد</string>

    <string name="fab_transition_name">fab_shared</string>

    <string name="no_name_has_been_entered">نامی وارد نشده است!</string>

    <string name="notebook_is_repeated">نام دفتر تکراری است.</string>
    <string name="word_is_repeated">کلمه ی وارد شده تکراری است.</string>
    <string name="there_is_nothing_to_play">چیزی برای پخش موجود نیست!</string>
    <string name="play_list_is_empty">لیست پخش خالی است.</string>
    <string name="no_notebook_has_been_made_yet">هنوز دفتری ساخته نشده است!</string>
    <string name="nothing_was_found">چیزی یافت نشد!</string>
    <string name="no_word_was_added">کلمه ای اضافه نشده است!</string>
    <string name="no_bookmarked_word_was_found">کلمه ی نشان شده ای یافت نشد!</string>
    <string name="all_words">همه ی کلمه ها</string>
    <string name="bookmarked_words_text">کلمات نشان شده</string>
    <string name="words_count">تعداد کلمات</string>
    <string name="bookmarked_count">تعداد نشان شده</string>
    <string name="no_favorite_notebook_was_found">دفتر مورد علاقه ای یافت نشد!</string>
    <string name="donate_me_a_coffee_money_if_app_was_useful">اگه این برنامه براتون مفید بوده یه قهوه مهمونم کنید!</string>
    <string name="ok_purchase">باشه(پرداخت)</string>
    <string name="ok_text">باشه</string>
    <string name="American">آمریکایی</string>
    <string name="English_UK">انگلستانی</string>

    <string name="word">کلمه</string>
    <string name="meaning">معنی</string>
    <string name="operation_done_successfully">عملیات با موفقیت انجام شد.</string>
    <string name="operation_failed">عملیات شکست خورد!</string>
    <string name="you_have_to_permit_for_app_correctly_working">برای اجرای درست این برنامه باید دسترسی‌های مورد نیاز را بدهید.</string>

    <string name="exit">خروج</string>
    <string name="exit_message">آیا می‌خواهید خارج شوید؟</string>

    <string name="dictionary_guide_text">کلمه‌ای که دوست دارید در بالا تایپ کنید.</string>
    <string name="dictionary_search_box_hint">جستجوی کلمه</string>

    <string name="delete">حذف</string>
    <string name="bookmarking">نشان کردن</string>
    <string name="edit">ویرایش</string>
    <string name="american_speech">تلفظ آمریکایی</string>
    <string name="british_speech">تلفظ بریتانیایی</string>

    <string name="search">جست و جو</string>
    <string name="search_word">جست‌وجوی کلمه</string>
    <string name="dictionary">دیکشنری</string>

    <string name="adding_to_notebook">اضافه کردن به دفتر</string>
    <string name="english_pronunciation">تلفظ بریتانیایی</string>
    <string name="american_pronunciation">تلفظ آمریکایی</string>
    <string name="adding_to_favorite">اضافه کردن به موردعلاقه‌ها</string>
    <string name="showing_in_app_widget">نمایش در ویجت برنامه</string>
    <string name="creating_notebook">ساختن دفتر</string>
    <string name="erase">پاک کردن</string>

    <string name="dilin_description">دیلین فراتر از یه دیکشنریه! اینجا دیکشنری خودتو می‌سازی، کلمات‌رو مرور می‌کنی و یادشون می‌گیری!</string>
    <string name="facility">سادگی</string>
    <string name="dilin_intro_tooltip_description">کار با دیلین خیلی سادس. کافیه دستت‌رو روی هر بخش که می‌خوای نگه‌داری تا راهنماشو ببینی.</string>
    <string name="widget">ویجت</string>
    <string name="dilin_intro_widget_description">دیلین یه ویجت باحال برای مرور کلمات توی صفحه‌ی اصلی گوشی داره!\n (یادت باشه تو گوشیت اضافش کنی)</string>
    <string name="adding_word_to_colon">اضافه کردن کلمه به:</string>

    <string name="version">نسخه</string>

    <string name="show_only_favorite_notebooks">فقط دفترهای موردعلاقه</string>

    <string name="please_install_myket">لطفا مایکت‌را نصب کنید.</string>

    </resources>
