<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/guidance"
        android:icon="@drawable/ic_action_guidance"
        android:title="@string/guidance" />

    <item android:title="@string/apps_text">
        <menu>
            <item
                android:id="@+id/rate"
                android:icon="@drawable/ic_action_star"
                android:title="@string/rate" />

            <item
                android:id="@+id/other_apps"
                android:icon="@drawable/ic_action_apps"
                android:title="@string/other_apps" />
        </menu>
    </item>

    <item android:title="@string/developer_text">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_action_info"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>