<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_shapes_selector">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll">

        <!--<com.example.amin.dictionande.custom_views.CustomPersianTextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/addint_word_text"-->
        <!--android:textSize="@dimen/standard_font_size_very_large"-->
        <!--android:textColor="@color/subjects_color"-->
        <!--android:padding="@dimen/standard_padding"-->
        <!--android:textAlignment="center"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:layout_marginBottom="@dimen/standard_margin_x2"/>-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin_x2"
            android:textColorHint="@color/edit_text_color_hint">

            <EditText
                android:id="@+id/et_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_padding"
                android:hint="@string/add_the_word_text"
                android:padding="@dimen/standard_padding"
                android:layout_marginHorizontal="@dimen/standard_table_distance"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textSize="@dimen/standard_font_size_large" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/edit_text_color_hint">

            <EditText
                android:id="@+id/et_meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_padding"
                android:layout_marginHorizontal="@dimen/standard_table_distance"
                android:hint="@string/meaning_of_word_text"
                android:layout_marginBottom="@dimen/standard_margin_x2"
                android:textSize="@dimen/standard_font_size_large"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/standard_table_distance"
            android:gravity="center"
            android:layout_marginBottom="@dimen/standard_margin">

            <com.example.amin.dictionande.custom_views.CustomPersianButton
                android:id="@+id/btn_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_text"
                android:textSize="@dimen/standard_font_size_large"
                android:layout_marginHorizontal="@dimen/standard_margin"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <com.example.amin.dictionande.custom_views.CustomPersianButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                android:textSize="@dimen/standard_font_size_large"
                android:layout_marginHorizontal="@dimen/standard_margin"
                android:background="?attr/selectableItemBackgroundBorderless" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>