<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_shapes_selector"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView_add_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_dialog_add_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin_x2"
                android:textColorHint="@color/edit_text_color_hint">

                <ir.proglovving.dilin.custom_views.CusEditText
                    android:id="@+id/et_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/standard_table_distance"
                    android:layout_marginTop="@dimen/standard_padding"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:hint="@string/add_the_word_text"
                    android:padding="@dimen/standard_padding"
                    android:textSize="@dimen/standard_font_size_large" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/edit_text_color_hint">

                <ir.proglovving.dilin.custom_views.CusEditText
                    android:id="@+id/et_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/standard_table_distance"
                    android:layout_marginBottom="@dimen/standard_margin_x2"
                    android:hint="@string/meaning_of_word_text"
                    android:padding="@dimen/standard_padding"
                    android:textSize="@dimen/standard_font_size_large" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/scrollView_add_word"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/scrollView_add_word"
                tools:layout_editor_absoluteX="40dp">

                <ir.proglovving.dilin.custom_views.CusButton
                    android:id="@+id/btn_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/standard_margin"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/verify_text"
                    android:textSize="@dimen/standard_font_size_large" />

                <ir.proglovving.dilin.custom_views.CusButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/standard_margin"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/cancel_text"
                    android:textSize="@dimen/standard_font_size_large" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>